# mosk_agent

./: .env.example  .gitignore  Makefile  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 20260528_0001_agent_runtime_sessions.py
docs/: STRUCTURE.md  agent_platform_lld.md  agent_platform_phase_2_lld.md  agent_platform_phase_3_lld.md  agent_platform_prd.md  agent_runtime.md
docs/design_abstract/: context.md  model.md  session_agent.md
openspec/: config.yaml  project.md
src/agent_runs/: __init__.py  manager.py
src/api/: app.py  exception_handler.py  registrar.py  response.py  run.py
src/cli/: main.py
src/context/: __init__.py  budget.py  builder.py  errors.py  pipeline.py  schemas.py
src/contracts/: __init__.py  agent_runs.py  base.py  patterns.py  sessions.py  tools.py
src/core/: __init__.py  async_task.py  config.py  context.py  errors.py  httpx_client.py  logging.py  retry.py  types.py  utils.py
src/events/: __init__.py
src/exceptions/: __init__.py  base.py  common.py  models.py  storage.py
src/models/: __init__.py  base.py  capabilities.py  profiles.py  registry.py  selector.py  streaming.py
src/patterns/: __init__.py  base.py  errors.py  modes.py  registry.py  schemas.py  selector.py
src/runtime/: __init__.py  cancellation.py  context.py  error_policy.py  factory.py  finish_reason.py  kernel.py  model_invoker.py  state_machine.py  stream.py
src/sessions/: __init__.py  manager.py  messages.py
src/storage/: database.py  redis.py
src/tools/: __init__.py  base.py  mock.py
tests/api/: test_exception_handler.py
tests/context/: __init__.py  test_builder.py  test_compact_strategies.py  (+5 more)
(+134 files in other folders)
