[project]
name = "mosk-agent"
requires-python = ">=3.12"
version = "0.1.0"
description = "Agent Platform - 通用 Agent Runtime 与治理平台"

dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.5,<0.116.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.6.1,<3.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.20.0",
    "uvicorn>=0.34.3",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.2.4,<8.0.0",
    "pytest>=8.1.1,<9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
force-single-line = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["asyncpg.*", "redis.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
